---
source: crates/ruff_linter/src/rules/flake8_async/mod.rs
---
ASYNC101.py:7:5: ASYNC101 Async functions should not call `open`, `time.sleep`, or `subprocess` methods
  |
6 | async def foo():
7 |     open("foo")
  |     ^^^^ ASYNC101
  |

ASYNC101.py:11:5: ASYNC101 Async functions should not call `open`, `time.sleep`, or `subprocess` methods
   |
10 | async def foo():
11 |     time.sleep(1)
   |     ^^^^^^^^^^ ASYNC101
   |

ASYNC101.py:15:5: ASYNC101 Async functions should not call `open`, `time.sleep`, or `subprocess` methods
   |
14 | async def foo():
15 |     subprocess.run("foo")
   |     ^^^^^^^^^^^^^^ ASYNC101
   |

ASYNC101.py:19:5: ASYNC101 Async functions should not call `open`, `time.sleep`, or `subprocess` methods
   |
18 | async def foo():
19 |     subprocess.call("foo")
   |     ^^^^^^^^^^^^^^^ ASYNC101
   |

ASYNC101.py:27:5: ASYNC101 Async functions should not call `open`, `time.sleep`, or `subprocess` methods
   |
26 | async def foo():
27 |     os.wait4(10)
   |     ^^^^^^^^ ASYNC101
   |

ASYNC101.py:31:5: ASYNC101 Async functions should not call `open`, `time.sleep`, or `subprocess` methods
   |
30 | async def foo():
31 |     os.wait(12)
   |     ^^^^^^^ ASYNC101
   |


